--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "upgrade-deps": "npm-check-updates -u && npm install"
   },
   "dependencies": {
+    "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -22,13 +23,13 @@
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
+    "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "npm-check-updates": "^17.1.13",
     "npm-run-all": "^4.1.5",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   },
   "volta": {
