--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "cbor-x": "^1.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
@@ -37,6 +38,8 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/w3c-web-hid": "^1.0.6",
+    "@types/w3c-web-usb": "^1.0.10",
     "npm-check-updates": "^17.1.13",
     "npm-run-all": "^4.1.5",
     "postcss": "^8",
