style: add tailwind sorting rule

--- a/biome.json
+++ b/biome.json
@@ -26,7 +26,8 @@
       },
       "suspicious": {
         "noArrayIndexKey": "off"
-      }
+      },
+      "nursery": { "useSortedClasses": "error" }
     }
   },
   "javascript": {
